    create_object/4, and create_category/4 built-in predicates where the
    local operator declarations would be visible outside the new entities.

    Corrected a bug where creating a new dynamic entity at runtime would
    define a no longer used bookkeeping dynamic predicate that would not
    be abolished when the entity is abolished.

    Updated the "benchmarks" example in order to protect against arithmetic
    exceptions when computing the total number of calls per second for each
    test. Reduced the number of benchmark test repetitions when running the
    unit tests to avoid lengthy computing times with slow Prolog compilers.


2.43.1 - September 12, 2011

    Changed the compiler to take into account the uses/2 directive when
    compiling calls to the database built-in methods. This change extends
    the semantics of the uses/2 directive and allows easier migration from
    plain Prolog applications to Logtalk.

    Added experimental support for using a predicate template as argument to
    the coinductive/1 directive. This template allows the specification of
    which arguments are meaningful for coinductive success. Based on similar
    functionality found on on Feliks Kluzniak's DRA meta-interpreter.

    Improved support for debugging coinductive predicates when using the
    Logtalk built-in debugger.

    Removed coinduction support for CxProlog. The current version of this
    compiler lacks a soft-cut built-in predicate or control construct, which
    is now required by the experimental coinduction implementation.

    Lifted a long-standing limitation that prevented the user definition of
    wrapper predicates for the bagof/3 and setof/3 built-in methods whenever
    the goal argument may use the ^/2 existential quantifier.

    Added support for the "^" meta-predicate meta-argument mode specifier
    suggested by Jan Wielemaker and found on SWI-Prolog 5.11.25. This mode